--- a/website/templates/aberdeen.html
+++ b/website/templates/aberdeen.html
@@ -116,7 +116,7 @@
     <!--        <hr class="heading-divider">-->
 
                 <p>
-                    Welcome to our vibrant church in Aberdeen, MS, where you'll find a warm and welcoming community
+                    Welcome to our vibrant church 201 South Columbus Street, Aberdeen, MS, where you'll find a warm and welcoming community
                     of faith! We invite you to join us as we gather together to worship, grow spiritually, and impact
                     our community with God's love. Our church is a place where people from all walks of life can come
                     as they are and find acceptance, encouragement, and support. With heartfelt worship, inspiring
@@ -143,11 +143,12 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
+                        <img src="../static/images/aberdeen-pastor.jpg" class="image__img">
                         <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
+                        <div class="image__title">Aberdeen Leadership</div>
                         <div class="image__description">
-                            Event overview
+                            Pastor Timothy Foster<br>
+                            First Lady Amy Foster
                         </div>
                         </div>
                     </div>
@@ -167,6 +168,13 @@
                     Experience uplifting worship, inspiring teachings, and a welcoming community. Connect with
                     like-minded individuals, engage in meaningful programs, and discover the joy of serving others.
                     Come as you are and be a part of our church family. We can't wait to meet you!
+                    <br> <br>
+                    <b>201 South Columbus Street - Aberdeen, MS
+                    <br> <br>
+                    Sunday Morning Service: 11:00 AM
+                    <br> <br>
+                    Thursday Bible Class: 7:00 PM
+                    </b>
                 </p>
             </div>
         </div>
