--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -80,8 +80,8 @@
         </div>
     </header>
     <div class="video-container">
-        <video autoplay loop muted playsinline>
-            <source src="../static/videos/final_promo.mov" type="video/mp4">
+        <video autoplay loop muted playsinline poster="../static/images/promo_placeholder.png">
+            <source src="../static/videos/desktop-promo.mp4" type="video/mp4"> <!-- MP4 format -->
         </video>
         <div class="splash-image-container">
             <div class="splash-image">
@@ -91,16 +91,16 @@
         <div class="floating-buttons-container">
             <div class="floating-buttons">
                 <ul>
-                    <a href="/what-to-expect"><li>In-Person Service</li></a>
-                    <a href="/watch"><li>Watch Online</li></a>
+                    <li><a href="/what-to-expect">In-Person Services</a></li>
+                    <li><a href="/watch">Watch Now</a></li>
                 </ul>
             </div>
         </div>
         <div class ="bottom-menu-container">
             <div class="bottom-menu">
                 <ul>
-                    <li><a href="/give">Give Today</a></li>
                     <li><a href="/events">Events</a></li>
+                    <li><a href="/give">Give Today</a></li>
                 </ul>
             </div>
         </div>
@@ -108,83 +108,85 @@
     <div class="grid-backdrop">
         <div class="grid">
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/sundayschool"><h2>Sunday School</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+                  <p>Join us in Sunday School every Sunday Morning from 9:45 - 10:45. All ages
+                   are welcomed!</p>
+                <a style="text-decoration: none; color: black;" href="/sundayschool">
+                    <img src="../static/images/Sunday-School2.png" class="placeholder-img"></a>
             </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/aberdeen"><h2>Aberdeen Campus</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                    <a style="text-decoration: none; color: black;" href="/">
-                        <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>            </div>
+                  <p>Join our ministry in Aberdeen, MS on 201 South Columbus Street.
+                      We would love to have you there!</p>
+                    <a style="text-decoration: none; color: black;" href="/aberdeen">
+                            <img src="../static/images/aberdeen-welcome.jpg" class="placeholder-img">
+                    </a>
+            </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/give"><h2>Giving Portal</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+                  <p>
+                      Thank you for being a cheerful giver. Your generosity supports the various ministries at GBT.
+                      </p>
+                <a style="text-decoration: none; color: black;" href="/give">
+                    <img src="../static/images/offering.jpg" class="placeholder-img"></a>
 
             </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/"><h2>New Year's Fasting and Prayer</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
+                  <p>Join us in corporate Fasting and Prayer as we welcome in the New Year. <br>January 8-12</p>
                 <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+                    <img src="../static/images/fasting-prayer.jpg" class="placeholder-img"></a>
 
             </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/youth"><h2>Youth Ministry</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+                  <p>Join Us for our Youth Services and events! Fellowship with us while strengthening
+                      your walk with God! </p>
+                <a style="text-decoration: none; color: black;" href="/youth">
+                    <img src="../static/images/R.jpg" class="placeholder-img"></a>
 
             </div>
             <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
+                <a style="text-decoration: none;color:black;" href="/watch"><h2>Our Services</h2></a>
                 <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+                  <p>Get involved in any of our services. We would love to have you!
+                     Our services are also livestreamed on YouTube @GBTnews!</p>
+                <a style="text-decoration: none; color: black;" href="/watch">
+                    <img src="../static/images/123.png" class="placeholder-img"></a>
 
             </div>
-            <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
-                <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+<!--            <div>-->
+<!--                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>-->
+<!--                <hr class="card-divider">-->
+<!--                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,-->
+<!--                        ut rhoncus mauris eleifend at.</p>-->
+<!--                <a style="text-decoration: none; color: black;" href="/">-->
+<!--                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>-->
 
-            </div>
-            <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
-                <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+<!--            </div>-->
+<!--            <div>-->
+<!--                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>-->
+<!--                <hr class="card-divider">-->
+<!--                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,-->
+<!--                        ut rhoncus mauris eleifend at.</p>-->
+<!--                <a style="text-decoration: none; color: black;" href="/">-->
+<!--                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>-->
 
-            </div>
-            <div>
-                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>
-                <hr class="card-divider">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,
-                        ut rhoncus mauris eleifend at.</p>
-                <a style="text-decoration: none; color: black;" href="/">
-                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>
+<!--            </div>-->
+<!--            <div>-->
+<!--                <a style="text-decoration: none;color:black;" href="/"><h2>TITLE</h2></a>-->
+<!--                <hr class="card-divider">-->
+<!--                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor placerat felis,-->
+<!--                        ut rhoncus mauris eleifend at.</p>-->
+<!--                <a style="text-decoration: none; color: black;" href="/">-->
+<!--                    <img src="../static/images/placeholder-image.png" class="placeholder-img"></a>-->
 
-            </div>
+<!--            </div>-->
         </div>
         <div class="more-grid-backdrop">
 
@@ -197,7 +199,9 @@
             <hr class="connect-with-us-divider">
             <p>GBT is a growing, thriving body of believers who are passionate about living for Christ! Whether 6 or 60
                 years of age, our members are active Kingdom builders who understand that God loves each of us and has
-                filled our lives with purpose.</p>
+                filled our lives with purpose.
+            </p>
+
             <li><a href="/connect">Learn About our Ministries</a></li>
 
         </div>
