--- a/website/templates/our-pastor.html
+++ b/website/templates/our-pastor.html
@@ -101,7 +101,7 @@
         </h2>
         <hr class="topic-divider">
         <div class="history-content">
-            <img src="../static/images/pastor1.jpg" class="history-img">
+            <img src="../static/images/BishopFortson.jpg" class="history-img">
             <p>
                 Bishop Robert Nelson Fortson, Sr. is a native of Egypt, Mississippi, a small town in the northeastern part of the state. He is a graduate of Jackson State University of Jackson, Mississippi with a Bachelor of Science degree in Business Administration. While attending Jackson State in 1975, he was invited by a fellow student to visit Greater Bethlehem Temple Church (GBTC) located two blocks from the university. From the moment he first entered the doors, he knew his life would never be the same, and he became a faithful member of the church until today. He credits much of his spiritual growth to the leadership of his late pastor, Bishop Phillip Coleman, Sr.<br><br>
 
