--- a/website/templates/sundayschool.html
+++ b/website/templates/sundayschool.html
@@ -144,11 +144,11 @@
             <div class="grid">
                 <div>
                     <div class="image">
-                        <img src="../static/images/logo.png" class="image__img">
+                        <img src="../static/images/Sunday-School1.jpg" class="image__img">
                         <div class="image__overlay image__overlay--primary">
-                        <div class="image__title">Event Title</div>
+                        <div class="image__title">Join US!</div>
                         <div class="image__description">
-                            Event overview
+                            We would love to have you!
                         </div>
                         </div>
                     </div>
