--- a/website/templates/watch.html
+++ b/website/templates/watch.html
@@ -74,16 +74,17 @@
             </label>
         </div>
     </header>
-
     <div class="banner">
         <img src="../static/images/temple.jpg" class="banner-img">
-        <div class="splash-container">
-            <img src="../static/images/logo.png" class="splash-img">
+        <div class="banner-h-container">
+            <h2>Watch Live</h2>
         </div>
         <div class="banner-msg">
-            <h2>Staying Spiritually Connected while being Physically Distant</h2>
+            <p>Staying Spiritually Connected while being Physically Distant</p>
         </div>
     </div>
+
+
     <div class="buffer"></div>
     <div class="watch-logos">
             <h5>Subscribe to GBTnews and Connect with us on Facebook</h5>
