--- a/website/templates/what-to-expect.html
+++ b/website/templates/what-to-expect.html
@@ -109,8 +109,16 @@ At GBT, learning is a key component of discipleship. Knowledge is power, and eve
 There’s something extra special about worshipping in an atmosphere where the presence of God is expected to manifest. At GBT, we believe worship is more than following a program or performing a scripted ceremony. Since the Spirit of the Lord brings liberty, we believe worshippers should be free to express themselves as part of an intimate relationship with God. Through live music, song and dance our worship goes beyond the traditional, giving way to expressions of joy and reverence through praise, tears, lifted hands, speaking in tongues, running, leaping, laughter and more!<br><br>
 
 Serving is an integral part of life at GBT. Through our missions we routinely provide meals to the hungry within the community and assist poor individuals and families with clothing and groceries on a weekly basis. With over 60 distinct ministries, there’s something for everyone to do, including outreach to college students, tutoring for school-aged children, prison ministries, counseling and substance abuse ministries, outreach to senior citizens, scholarships, summer camps, blood drives, health screenings and seminars, financial planning courses, children ministries and hospital visitation.<br><br>
+              <b><br> <br>Morning Worship - Sundays 11AM
 
-            </p>
+ <br> <br>Evening Worship - Sundays 6PM
+
+ <br> <br>Noonday Bible Study - Wednesday 12PM
+
+ <br> <br>Mid-Week Bible Study - Wednesday 7PM
+
+ <br> <br>Young People Service - Fridays 7PM
+            </b>  </p>
         </div>
     </div>
 
