--- a/website/templates/youth.html
+++ b/website/templates/youth.html
@@ -165,6 +165,11 @@
                     a community that embraces and empowers you. Join us and be part of a vibrant and supportive network where
                     you can grow spiritually and impact the world around you. Don't wait any longer – get connected with
                     our Youth Ministry and embark on an exciting adventure that will shape your life!
+                    <b>
+
+                    <br> <br>Youth Service - Fridays 7PM<br> <br>
+                        Youth Leadership: Jeremy Sanford & Micah Sanford
+                    </b>
                 </p>
             </div>
         </div>
