--- a/website/static/css/events.css
+++ b/website/static/css/events.css
@@ -6,6 +6,7 @@
     --grey1: rgb(174, 158,158);
     --grey2: rgb(237,237,237);
     --burgundy-overlay: rgba(122,59,59,0.5);
+    --grey3: rgb(127,127,127);
 
 }
 
@@ -141,9 +142,26 @@ nav a:hover{
 }
 
 .banner {
-  display: none;
+    all: unset;
+    background: rgba(122,59,59,0.5);
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
-
+.event-img {
+    all: unset;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
 .mobile-banner{
     position: relative;
     top: 80px;
@@ -200,11 +218,19 @@ nav a:hover{
 
 .banner-h-container h2{
     color: white;
-    font-weight: 400;
-    font-size: 22px;
+    font-size: 45px;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
 }
-
+.buffer {
+    width: 100%;
+    height: 25px;
+    background: var(--burgundy);
+}
 .banner-msg{
     position: relative;
     top: 150px;
@@ -240,13 +266,6 @@ h5{
 .offering-container{
     display: none;
 }
-
-.buffer{
-    display:none;
-    }
-
-
-
 
 .banner-buffer{
             width: 100%;
@@ -486,7 +505,7 @@ h4{
 .highlights-container{
     display: none;
 }
-@media screen and (min-width: 820px){
+@media screen and (min-width: 1000px){
 
 
         .highlights-container{
@@ -1096,4 +1115,55 @@ h4{
     display: relative;
     height: 25px;
 }
+.calendar-h2{
+    display: flex;
+    justify-content: center;
+}
+.calendar-h2 h2{
+    color: black;
+    font-size: 48px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.calendar{
 
+    display: flex;
+    justify-content: center;
+    margin: 50px;
+    margin-top: 10px;
+    height: 750px;
+}
+
+.calendar iframe{
+    width: 100%;
+    height: 100%;
+    border: solid 10px var(--grey2);
+    border-radius: 10px;
+}
+.announce-divider {
+                width: 200px;
+                position: relative;
+                top: -20px;
+                padding: 0px;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                border-top: 4px solid var(--burgundy);
+                border-radius: 5px;
+            }
+
+.mobile .banner{
+    height: 200px;
+}
+
+.mobile .calendar-h2 h2{
+    color: black;
+    font-size: 38px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
