--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -187,7 +187,6 @@ nav a:hover{
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 10px;
 
     }
 
@@ -211,7 +210,7 @@ nav a:hover{
     margin-right: 0px;
     margin-left: 0px;
     margin-bottom: 30px;
-    background: rgba(122,59,59,.5);
+    background: rgb(122,59,59);
     width: 200px;
     border-radius: 99px;
 
@@ -280,6 +279,8 @@ nav a:hover{
      margin-top: 25px;
      border-radius: 10px;
      }
+
+
 
 .placeholder-img{
     padding: 0px;
@@ -548,7 +549,7 @@ h4{
         }
         .floating-buttons-container{
             width: 100%;
-            height: 50px;
+            height: 60px;
             position: absolute;
             bottom: 100px;
             display: flex;
@@ -557,7 +558,7 @@ h4{
             justify-content: center;
             align-items: center;
             gap: 20px;
-            padding: 10px;
+            padding: 0px;
 
         }
 
@@ -650,7 +651,7 @@ h4{
             .grid{
                 display: grid;
                 grid-template-columns: repeat(3, 361px);
-                grid-template-rows: repeat(3, 527px);
+                grid-template-rows: repeat(2, 527px);
                 }
 
 
@@ -931,23 +932,22 @@ h4{
 
 .mobile .splash-image-container{
     bottom: 220px;
-    height: 100px;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 .mobile .splash-image-container .splash-image{
     height: auto;
-    width: 85%;
+    max-width: 100%;
+}
+.mobile .splash-image-container .splash-image img{
+    width: 90%;
+    height: auto;
 }
 
 .mobile .floating-buttons-container{
-    bottom: 120px;
+    bottom: 80px;
 }
-.mobile .floating-buttons-container .floating-buttons ul a{
-    display: flex; /* Use flexbox */
-    align-items: center; /* Vertically center content */
-    justify-content: center; /* Horizontally center c uontent */
-
-}
+/*
 .mobile .floating-buttons-container .floating-buttons ul a li{
     width: 50%;
     height: 30px;
@@ -956,12 +956,12 @@ h4{
     padding-left: 20px;
     padding-right: 20px;
     font-size: 20px;
-    background: rgb(122,59,59);
     border-radius: 5px;
-    display: flex; /* Use flexbox */
-    align-items: center; /* Vertically center content */
-    justify-content: center; /* Horizontally center content */
-}
+
+}*/
+.mobile .floating-buttons-container .floating-buttons ul li{
+    border-radius: 5px;
+    }
 
 .mobile .grid{
     display: grid;
@@ -980,6 +980,8 @@ h4{
      background: white;
      height: 600px;
      margin-top: 50px;
+     margin-left: 10px;
+     margin-right: 10px;
      border-radius: 10px;
      }
 
@@ -992,7 +994,7 @@ h4{
 }
 
 .mobile .grid div a img{
-    width: 90%;
-    height: 60%;
+    max-width: 100%;
+    max-height: 100%;
 
 }
