--- a/website/static/css/watch.css
+++ b/website/static/css/watch.css
@@ -139,12 +139,17 @@ nav a:hover{
 }
 
 .banner {
-  position: relative;
-  width: 100%;
-  height: 263px;
-  background: rgba(122,59,59,0.5);
-  overflow: hidden; /* Enable vertical scrolling if the content overflows */
-
+    all: unset;
+    background: rgba(122,59,59,0.5);
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner-img{
@@ -175,21 +180,33 @@ nav a:hover{
     height: 125px;
     width: 125px;
 }
-
-.banner-msg{
+.banner-h-container {
     position: relative;
-    top: 65px;
+    display: flex;
+    width: 90%;
+    margin: 0;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.banner-msg{
+    text-align: center;
+    padding: 5px;
 }
 
-.banner-msg h2{
+
+.banner-msg p {
     color: white;
-    font-weight: 400;
+    font-weight: 200;
     margin: 5px;
     margin-top: 10px;
-    font-size: 22px;
+    font-size: 24px;
 }
-
+.banner-h-container h2 {
+    color: white;
+    font-weight: 400;
+    font-size: 40px;
+}
 h5{
    color: black;
    font-size: 24px;
@@ -313,7 +330,7 @@ h4{
         text-align: center;
 }
 
-@media screen and (min-width: 769px){
+@media screen and (min-width: 1000px){
 
         header{
             position: static;
@@ -443,15 +460,43 @@ h4{
             height: 200px;
             width: 200px;
         }
-
-        .banner-msg h2{
+        .banner-h-container h2 {
+            all: unset;
+            color: white;
+            font-weight: 400;
+            font-size: 60px;
+            width: 50%;
+        }
+        .banner-msg p {
+            all: unset;
+            color: white;
+            font-weight: 300;
+            margin: 5px;
+            margin-top: 10px;
+            font-size: 40px;
+            width: 75%;
+        }
+        .banner-h-container {
+            all: unset;
+            position: relative;
+            top: -15px;
             display: flex;
+            width: 100%;
+            margin: 0;
+            text-align: center;
             justify-content: center;
             align-items: center;
-            position: relative;
-            bottom: 45px;
-            font-size: 40px;
         }
+        .banner-msg {
+            all: unset;
+            display: flex;
+            width: 100%;
+            margin: 0;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+        }
+
 
         .buffer{
             width: 100%;
