--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -14,8 +14,8 @@
       const navToggle = document.querySelector('.nav-toggle');
       const mobileNavLogo = document.querySelector('.mobile-nav-logo');
       const navToggleLabel = document.querySelector('.nav-toggle-label');
-      const mobileBanner = document.querySelector('.mobile-banner');
-      const buffer = document.querySelector('.buffer');
+      const banner = document.querySelector('.banner');
+      const calendarH2 = document.querySelector('.calendar-h2');
 
 
       if (userAgent.includes('android') ||
@@ -33,8 +33,8 @@
         mobileNavLogo.classList.add('mobile');
         navToggleLabel.classList.add('mobile');
         navToggle.classList.add('mobile');
-        mobileBanner.classList.add('mobile');
-        buffer.classList.add('mobile');
+        banner.classList.add('mobile');
+        calendarH2.classList.add('mobile');
 
 
       } else {
@@ -44,8 +44,8 @@
         mobileNavLogo.classList.add('desktop');
         navToggleLabel.classList.add('desktop');
         navToggle.classList.add('desktop');
-        mobileBanner.classList.add('desktop');
-        buffer.classList.add('desktop');
+        banner.classList.add('desktop');
+        calendarH2.classList.add('desktop');
 
       }
     });
@@ -89,13 +89,13 @@
             </p>
         </div>
     </div>
-    <div class="mobile-banner">
-        <div class="mobile-banner-h-container">
-            <h2>EVENTS</h2>
-        </div>
-        <img src="../static/images/table1.jpg" class="mobile-offering-img">
+<!--    <div class="mobile-banner">-->
+<!--        <div class="mobile-banner-h-container">-->
+<!--            <h2>EVENTS</h2>-->
+<!--        </div>-->
+<!--        <img src="../static/images/table1.jpg" class="mobile-offering-img">-->
 
-    </div>
+<!--    </div>-->
 
     <div class="buffer"></div>
 
@@ -157,147 +157,156 @@
         </div>
     </div>
     </div>
-
-
-    <div class="event-container">
-      <h3 class="month">June</h3>      <!--  year-->
-        <hr class="month-divider">
-      <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">8</div>
-            <div class="day">Thursday</div>        <!--month-->
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:00 am
-          </div>
-        </div>
-      </div>
-
-      <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">9</div>
-            <div class="day">Friday</div>
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:45 am
-          </div>
-        </div>
-      </div>
-
-
-
-      <h3 class="month">July</h3>
-        <hr class="month-divider">
-        <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">7</div>
-            <div class="day">Wednesday</div>
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:00 am
-          </div>
-        </div>
-      </div>
-
-      <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">9</div>
-            <div class="day">Friday</div>
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:30 am
-          </div>
-        </div>
-      </div>
-
-      <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">12</div>
-            <div class="day">Monday</div>
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:00 am
-          </div>
-        </div>
-      </div>
-
-      <div class="event">
-        <div class="event-left">
-          <div class="event-date">
-            <div class="date">20</div>
-            <div class="day">Tuesday</div>
-          </div>
-        </div>
-
-        <div class="event-right">
-          <h3 class="event-title">EVENT</h3>
-
-          <div class="event-description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,
-            ratione.
-          </div>
-
-          <div class="event-timing">
-            <img src="../static/images/time.png" alt="" /> 10:00 am
-          </div>
-        </div>
-      </div>
+    <div class="calendar-h2">
+        <h2>WHAT'S GOING ON</h2>
     </div>
+                    <hr class="announce-divider">
+
+<div class="calendar">
+    <iframe src="https://embed.styledcalendar.com/#Qhse99DB1rUHGgqGzdZ3" title="Styled Calendar" class="styled-calendar-container" style="width: 100%; border: none;" data-cy="calendar-embed-iframe"></iframe>
+    <script async type="module" src="https://embed.styledcalendar.com/assets/parent-window.js"></script>
+</div>
+
+
+<!--    <div class="event-container">-->
+<!--      <h3 class="month">June</h3>      &lt;!&ndash;  year&ndash;&gt;-->
+<!--        <hr class="month-divider">-->
+<!--      <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">8</div>-->
+<!--            <div class="day">Thursday</div>        &lt;!&ndash;month&ndash;&gt;-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:00 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--      <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">9</div>-->
+<!--            <div class="day">Friday</div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:45 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+
+
+<!--      <h3 class="month">July</h3>-->
+<!--        <hr class="month-divider">-->
+<!--        <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">7</div>-->
+<!--            <div class="day">Wednesday</div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:00 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--      <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">9</div>-->
+<!--            <div class="day">Friday</div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:30 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--      <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">12</div>-->
+<!--            <div class="day">Monday</div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:00 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--      <div class="event">-->
+<!--        <div class="event-left">-->
+<!--          <div class="event-date">-->
+<!--            <div class="date">20</div>-->
+<!--            <div class="day">Tuesday</div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--        <div class="event-right">-->
+<!--          <h3 class="event-title">EVENT</h3>-->
+
+<!--          <div class="event-description">-->
+<!--            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus,-->
+<!--            ratione.-->
+<!--          </div>-->
+
+<!--          <div class="event-timing">-->
+<!--            <img src="../static/images/time.png" alt="" /> 10:00 am-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
 
 
 
